--- a/index(portfolio).html
+++ b/index(portfolio).html
@@ -245,7 +245,7 @@
     
             if (targetSection) {
                 window.scrollTo({
-                    top: targetSection.offsetTop - 50, // Adjust for navbar
+                    top: targetSection.offsetTop - 50, // 
                     behavior: "smooth"
                 });
     
